Fix error PMD